site/htdocs/avanty/style/avanty.css
@import url('fonts.css');
@import url('theme/jquery-ui.min.css');
@import url('theme/custom.css');
@import url('activate.css');
@import url('lock.css');
@import url('super.css');
@import url('login.css');
@import url('cash.css');
@import url('ticket.css');

body.avanty {
	font-family: 'Open Sans', sans-serif;
	font-size: 1.5em;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100vh;
	background-color: white;
	overflow: hidden;
	display: none;
}

h1, h2, h3, h4, h5 {
	margin-top: 0;
}

h1 {
	margin-bottom: 0.5em;
}

.avanty .label, label, h1, h2, h3, h4, h5 {
	cursor: default;
	pointer-events: none;
    user-select: none;
    -webkit-user-select: none;
}

.numbers {
	font-family: 'Ubuntu Mono Regular', sans-serif !important;
}

/* for visual reference: */
.onboard {
	position: absolute;
	width: 100vw;
	height: 200px;
	top: calc(100vh - 200px);
	left: 0;
	display: block;
	z-index: 10000;
}

.onboard:hover {
	background-image: url('../img/onboard.png');
	background-color: rgba(0,0,0,0.125);
}

.toast {
	pointer-events: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 11000;
	width: 100%;
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.toast > span {
	position: relative;
	pointer-events: all;
	background-color: gray;
	color: white;
	font-size: 1em;
	padding: 0.75em;
	border-radius: 0.5em;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	cursor: pointer;
}

/* Close vignette */
.toast > span > img {
	position: absolute;
	top: 0.375em;
	left: calc(100% - 12px - 0.375em);
	width: 12px;
	height: 12px;
}

/* clock showing the date/time */
#clock {
	position: absolute;
	top: 0;
	left: calc((50px + 8px) + 8px);
	z-index: 10000;
	height: 50px;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

#clock span {
	display: block;
	text-align: center;
	font-size: small;
	white-space: nowrap;
}

#hourglass {
	display: none;
	position: absolute;
	left: calc(100vw - 4 * (50px + 8px)); /* 8px is the distance between elements. */
	top: 10px;
	z-index: 10000;
}

#hourglass img {
	width: 48px;
	height: 48px;
}

.page {
	display: none;
	width: 100%;
	height: 100vh;
}

.section {
	display: flex;
	position: absolute;
	top: 0;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100vh;
}

.section-small {
	/* Sections that have few elements and will use the keyboard */
	/* have reduced area so that the contents center on the screen */
	/* when the keyboard is shown. */
	height: calc(100vh - 200px);
}

.with-shell .section {
	margin-top: 70px;
	height: calc(100vh - 70px); /* 70px is the shell's height */
}

.with-shell .section.section-small {
	height: calc(100vh - 200px - 70px); /* 70px is the shell's height */
}


.quadrant {
	position: absolute;
	width: 50%;
	height: 50%;
}

.quadrant-1 { top: 0; left: 0; }
.quadrant-2 { top: 0; left: 50vw; }
.quadrant-3 { top: 50vh; left: 50vw; }
.quadrant-4 { top: 50vh; left: 0; }
.quadrant-5 { top: 25vh; left: 25vw; display: table; }

form, .cont {
	display: flex;
	flex-direction: column;
	align-items: center;
}

form table {
	border-spacing: 0.5em;
	margin: auto;
}

form tbody th {
	text-align: right;
	vertical-align: baseline;
}

form tbody td {
	text-align: left;
	vertical-align: baseline;
	position: relative;
}

form tfoot td {
	padding-top: 1em;
	text-align: center;
}

form tfoot td:first-child {
	text-align: right;
}

form tfoot td:last-child {
	text-align: left;
}

form tfoot td[colspan="2"] {
	text-align: center;
}

form label.error {
	display: block;
	position: absolute;
	top: 3em;
	left: -8px;
	width: 100%;
	text-align: right;
	font-size: 50%;
	color: red;
	letter-spacing: -1px;
}

.form-hor {
	display: flex;
	flex-direction: row;
	align-items: top;
}

.form-ver {
	display: flex;
	flex-direction: column;
	align-items: left;
}

.shell {
	position: relative;
	z-index: 100;
	height: 66px;
	background-color: #f0f0d0;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.shell-tool {
	margin-top: 8px;
}

.avanty .shell-menu {
	position: absolute;
	display: inline-block;
	top: 0;
	padding: 0;
	border-width: 0;
	left: 25%;
	width: 50%;
    user-select: none;
    -webkit-user-select: none;
}

.shell-menu > div {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

button.shell-tool {
	position: absolute;
}

button.shell-tool img {
	width: 32px;
	height: 32px;
}

.shell-lock, .shell-unlock {
	left: calc(100vw - 1 * (50px + 8px)); /* 8px is the distance between elements. */
}

.shell-logout {
	left: calc(100vw - 3 * (50px + 8px)); /* 8px is the distance between elements. */
}

.shell-back {
	left: 8px; /* 8px is the distance between elements. */
}

.avanty button.shell-tool.button-icon {
	padding: 8px;
}

.avanty button.shell-tool img {
	position: static;
	vertical-align: middle;
}

.shell h4 {
	margin-top: 1em;
	margin-bottom: 0.75em;
	border-bottom: 1px solid lightgray;
}

input[type="text"].money {
	text-align: right;
}

/* Used to denote money symbol. */
s {
	text-decoration: unset;
}

s:before {
	content: '$';
}

form s:before {
	padding-right: 0.5em;
}

